# floatium-rs

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  floatium-rs-autopatch.pth  pyproject.toml
floatium_rs/: __init__.py  __main__.py  _autopatch.py  _cli.py
src/: dtoa.rs  format_short.rs  lib.rs  slots.rs
tests/: test_parity.py
