[package]
name = "floatium-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-backed drop-in replacement for CPython float formatting/parsing."
repository = "https://github.com/eendebakpt/floatium-rs"

[lib]
name = "_ext"
crate-type = ["cdylib"]

[dependencies]
# extension-module: link as a CPython extension (don't link libpython).
pyo3 = { version = "0.28", features = ["extension-module"] }
# zmij: Rust port of Victor Zverovich's {fmt} float formatter (Schubfach).
zmij = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
